# metadata

./: CMakeLists.txt  Readme.md
MetadataUi/: package.json
MetadataUi/src/: App.jsx
examples/python/: basic_usage.py
include/fr/metadata/: magic_wrapper.h  metadata.h  server.h  ui_helper.h
python_api/: FRMetadata.cpp
test/: CMakeLists.txt  MetadataTest.cpp
